Added data base support

--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ PORT=5001
 REDIS_HOST=telescopefish.redistogo.com
 REDIS_PORT=9420
 REDIS_PASSWORD=ca251e430e13bc22a3bd0f228977ee9c
+
+DB_HOST=ds027409.mlab.com:27409
+DB_NAME=aidifycloud
+DB_USER=aidifyuser
+DB_PASSWORD=aidify
